<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mpumd.poc</groupId>
    <artifactId>person</artifactId>

    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>25</java.version>
        <!-- TODO wait the update of spring dependencies to manage this version or greater -->
        <maven.compiler.proc>full</maven.compiler.proc>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- only for manager version of dependencies -->
        <spring-boot.version>4.0.5</spring-boot.version>
        <!-- override sb dependencies version -->
        <junit-bom.version>5.14.3</junit-bom.version>

        <!-- Test -->
        <instancio-junit.version>5.5.1</instancio-junit.version>
        <datafaker.version>2.5.2</datafaker.version>
        <cucumber-bom.version>7.34.3</cucumber-bom.version>

        <!-- CI pitest -->
        <pitest-maven.version>1.17.1</pitest-maven.version>
        <pitest-junit5-plugin.version>1.2.1</pitest-junit5-plugin.version>
        <pitest-maven.include.scope>com.mpumd.poc.person*</pitest-maven.include.scope>
        <pitest-maven.exclude.scope>com.mpumd.poc.person.test*</pitest-maven.exclude.scope>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
    </properties>

    <packaging>pom</packaging>

    <modules>
        <module>context-person</module>
        <module>application</module>
        <module>infra-spring</module>
        <!--        <module>test-lib</module>-->
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-bom</artifactId>
                <version>${cucumber-bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--##### Build #####-->
        <!-- like lombok or SB configuration processor -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <!--##### Run #####-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!--##### Test #####-->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- UT -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- BDD -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- generator of fake data like firstname -->
        <dependency>
            <groupId>org.instancio</groupId>
            <artifactId>instancio-junit</artifactId>
            <version>${instancio-junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.datafaker</groupId>
            <artifactId>datafaker</artifactId>
            <version>${datafaker.version}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- BUG maven 4 https://github.com/apache/maven-apache-parent/issues/265
                    in attemps of the correction, this following fix plugin management version config like bellow
                -->
                <!--                <plugin>-->
                <!--                    <groupId>org.apache.maven.plugin-tools</groupId>-->
                <!--                    <artifactId>maven-plugin-annotations</artifactId>-->
                <!--                    <version>3.11.0</version>-->
                <!--                </plugin>-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <!--                                <version>1.18.40</version>-->
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <!-- mutation testing to increase the test resilience -->
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>${pitest-maven.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>${pitest-junit5-plugin.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>pit-report</id>
                        <!-- <phase>test</phase> -->
                        <!-- FIXME fix no mutation test on test lib, by waiting, the plugin is disable. -->
                        <phase>disabled-plugin</phase>
                        <goals>
                            <goal>mutationCoverage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <targetClasses>
                        <param>${pitest-maven.include.scope}</param>
                    </targetClasses>
                    <targetTests>
                        <param>${pitest-maven.include.scope}</param>
                    </targetTests>
                    <excludedClasses>
                        <param>${pitest-maven.exclude.scope}</param>
                    </excludedClasses>
                    <excludedTestClasses>
                        <param>${pitest-maven.exclude.scope}</param>
                    </excludedTestClasses>
                    <mutators>
                        <!-- https://pitest.org/quickstart/mutators/ -->
                        <!-- OLD_DEFAULTS, DEFAULTS, STRONGER -->
                        <mutator>ALL</mutator>
                    </mutators>
                    <!-- It failed on specific tests. I don't know why
                        SEVERE : Tests failing without mutation:
                        Description [
                            testClass=com.mpumd.poc.person.context.aggregat.PersonTest,
                            name=[engine:junit-jupiter]/[class:com.mpumd.poc.person.context.aggregat.PersonTest]/[method:dontMissTest_TDD_Approch_please()]
                        ]
                        [ERROR] Failed to execute goal org.pitest:pitest-maven:1.17.0:mutationCoverage (default-cli)
                        on project context-person: Execution default-cli of goal org.pitest:pitest-maven:1.17.0:mutationCoverage
                        failed: 1 tests did not pass without mutation when calculating line coverage. Mutation testing requires a green suite.

                        TODO fix it if possible with new version
                        In waiting, exclude test with junit 5 tags
                    -->
                    <excludedGroups>PITestIgnore</excludedGroups>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
